--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -54,10 +54,14 @@
             app:destination="@id/profileFragment" />
         <action
             android:id="@+id/action_profileFragment_to_favFragment"
-            app:destination="@id/favFragment" />
+            app:destination="@id/favFragment"
+            app:popUpTo="@id/profileFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_profileFragment_to_bagFragment"
-            app:destination="@id/bagFragment" />
+            app:destination="@id/bagFragment"
+            app:popUpTo="@id/profileFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/productDetailFragment"
